# simulatore-indici-comuni-2025

./: README.md  app_test.py  create_index.py  index_config_D2_D3.json  pyproject.toml
